--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,8 @@
         "laravel/framework": "^8.75",
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
+        "symfony/http-client": "^6.1",
+        "symfony/mailgun-mailer": "^6.1",
         "tymon/jwt-auth": "^1.0"
     },
     "require-dev": {
